# CrashCourseInOGL

./: .gitignore  CMakeLists.txt  LoadShaders.h  README.md  build.bat  build.sh  main.c  main.cpp
.build/Week1/: Week1.vcxproj  Week1.vcxproj.filters
.build/Week2/: Week2.vcxproj  Week2.vcxproj.filters
.build/Week3/: Week3.vcxproj  Week3.vcxproj.filters
.build/Week4/: Week4.vcxproj  Week4.vcxproj.filters
.build/Week5/: Week5.vcxproj  Week5.vcxproj.filters
.build/Week6/: Week6.vcxproj  Week6.vcxproj.filters
Week1/: CMakeLists.txt  LoadShaders.h  README  main.cpp  shader.frag  triangles.vert
Week2/: CMakeLists.txt  README  TestSuite.hpp
Week3/: CMakeLists.txt  LoadShaders.h  main.cpp
Week4/: CMakeLists.txt  main.cpp
Week5/: CMakeLists.txt  README  main.cpp
Week6/: CMakeLists.txt  Font.cpp  Font.hpp  README  main.cpp
cmake/Modules/: FindFREETYPE.cmake  FindGLEW.cmake  FindGLU.cmake  FindGLUT.cmake  FindPNG.cmake  FindZLIB.cmake
include/math/: matrix.hpp  vector.hpp
